Deprecation removal